# src/routes/fetchResult.routes.ts
@@ -1,11 +1,13 @@
 import { Router } from 'express';
+import * as fetchResultController from '../controllers/fetchResult.controller.js';
 import {
     validateFetcherName,
     validateFetcherFetchValidation,
 } from '../middlewares/fetcher.validator.js';
-import { validateFetchResultId } from '../middlewares/fetchResult.validator.js';
-
-import * as fetchResultController from '../controllers/fetchResult.controller.js';
+import {
+    validateFetchResultId,
+    validateExistingFetchResultBeforeGeneration,
+} from '../middlewares/fetchResult.validator.js';
 
 export const fetchResultRoutes = Router();
 
@@ -13,34 +15,34 @@ fetchResultRoutes.post(
     '/fetchResults/fetchers/:fetcherName/generate',
     validateFetcherName,
     validateFetcherFetchValidation,
+    validateExistingFetchResultBeforeGeneration,
     fetchResultController.generateFetchResult,
-);
-
-fetchResultRoutes.get('/fetchResults', fetchResultController.getFetchResults);
-fetchResultRoutes.get(
-    '/fetchResults/:id',
-    validateFetchResultId,
-    fetchResultController.getFetchResultById,
-);
-fetchResultRoutes.put(
-    '/fetchResults/:id',
-    validateFetchResultId,
-    fetchResultController.updateFetchResultById,
-);
-fetchResultRoutes.delete(
-    '/fetchResults/:id',
-    validateFetchResultId,
-    fetchResultController.deleteFetchResultById,
-);
-fetchResultRoutes.delete('/fetchResults', fetchResultController.deleteAllFetchResults);
-
-fetchResultRoutes.get(
-    '/fetchResults/fetchers/:fetcherName',
-    validateFetcherName,
-    fetchResultController.getFetchResultsByFetcherName,
 );
 fetchResultRoutes.delete(
     '/fetchResults/fetchers/:fetcherName',
     validateFetcherName,
     fetchResultController.deleteFetchResultsByFetcherName,
+);
+fetchResultRoutes.get(
+    '/fetchResults/fetchers/:fetcherName',
+    validateFetcherName,
+    fetchResultController.getFetchResultsByFetcherName,
+);
+fetchResultRoutes.get(
+    '/fetchResults/fetchers/:fetcherName/:id',
+    validateFetcherName,
+    validateFetchResultId,
+    fetchResultController.getFetchResultByFetcherNameAndId,
+);
+fetchResultRoutes.put(
+    '/fetchResults/fetchers/:fetcherName/:id',
+    validateFetcherName,
+    validateFetchResultId,
+    fetchResultController.updateFetchResultByFetcherNameAndId,
+);
+fetchResultRoutes.delete(
+    '/fetchResults/fetchers/:fetcherName/:id',
+    validateFetcherName,
+    validateFetchResultId,
+    fetchResultController.deleteFetchResultByFetcherNameAndId,
 );
